updated fonts, partners section, bg color tweaks

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 </head>
 <body class="dark">
-    <div style="z-index:-1;position:fixed;height:100%;width:100%;background:rgba(19, 18, 18, 0.658);right:0;left:0;" class="overlay">
+    <div style="z-index:-1;position:fixed;height:100%;width:100%;background:rgba(25, 31, 43, 0.63);right:0;left:0;" class="overlay">
 	</div>
     <div class="main">
 		<header>
@@ -55,7 +55,7 @@
 		<main>
 			<article class="articleLeft">
 				<div>
-					<h2 class="italic-text semibold-text">Lending and Borrowing protocol on Cardano and Ergo</h2>
+					<h2 class=" ">Lending and Borrowing protocol on Cardano and Ergo</h2>
 					<h1>Open-source Lending Without Limits. </h1>
 					<div class="buttons">
 						<a href="#" target="_blank"><button class="button">Launch CherryLend</button></a>
@@ -71,9 +71,8 @@
     <div class="groupCards">
 
         <section class="title">
-            <h2 class="italic-text semibold-text">Why CherryLend</h2>
-            <p>CherryLend unlocks the power of your
-            assets in a decentralized environment.</p>
+            <h2 class=" ">Why CherryLend</h2>
+            <p>CherryLend unlocks the power of lending for everyone in our ecosystem. </p>
         </section>
 
         <article class="gcards">
@@ -155,8 +154,8 @@
     <div class="groupCases">
 
 		<section class="titleCases">
-			<h2 class="semibold-text italic-text">Features and Use Cases</h2>
-			<p>Learn more about the functions of cherrylend.</p>
+			<h2 class=" ">Features and Use Cases</h2>
+			<p>There are multiple ways to leverage CherryLend.</p>
 		</section>
 
 		<article class="gCases">
@@ -174,7 +173,7 @@
 					
 			</div>
 				<h2>Cherry Token</h2>
-				<p>The Cherry token is crucial to the protocol’s safety with in-app staking and DAO governance voting utility.</p>
+				<p>The CHRY token is crucial to the protocol’s safety with in-app staking and DAO governance voting utility.</p>
 			</div>
 			<div class="cCases">
 				<div class="dynamic-icon">
@@ -238,28 +237,28 @@
     <section class="assets">
 
         <div class="title">
-            <h2>Your Assets, Secured</h2>
-            <p>Audited by the worlds leading security firms, security of the CherryLend Protocol is the highest priority.</p>
+            <h2>Our Partners</h2>
+            <p>Learn more about our partners who are contributing to Cardano and Ergo.</p>
         </div>
 
         <article class="groupAssets">
 
             <a class="cardAsset" href="https://anetabtc.io/" target="_blank">
                 <!-- <img src="./img/logo_anetabtc_l.png" alt="aneta_logo" class="sunMode"> -->
-                <img src="./img/logo_anetabtc_d.png" alt="aneta_logo" class="darkMode">
+                <img src="./img/logo_anetabtc.png" alt="aneta_logo" class="darkMode">
             </a>
             <a class="cardAsset" href="https://minswap.org/" target="_blank">
                 <!-- <img src="./img/logo_minswap_l.png" alt="minswap_logo" class="sunMode"> -->
-                <img src="./img/logo_minswap_d.png" alt="minswap_logo" class="darkMode">
+                <img src="./img/logo_ergopod.png" alt="minswap_logo" class="darkMode">
             </a>
             <a class="cardAsset" href="https://aada.finance/" target="_blank">
                 <!-- <img src="./img/logo_aada_l.png" alt="aada_logo" class="sunMode"> -->
-                <img src="./img/logo_aada_d.png" alt="aada_logo" class="darkMode">
+                <img src="./img/logo_paideia.png" alt="aada_logo" class="darkMode">
             </a>
 
             <a class="cardAsset" href="https://www.scatdao.com/" target="_blank">
                 <!-- <img src="./img/logo_scatdao_l.png" alt="scat_logo" class="sunMode"> -->
-                <img src="./img/logo_scatdao_d.png" alt="scat_logo" class="darkMode">
+                <img src="./img/logo_saturn-labs.png" alt="scat_logo" class="darkMode">
             </a>
 
 
@@ -270,7 +269,7 @@
 	<section class="social">
 
 		<div class="title">
-			<h2 class="semibold-text ita">Join our Community</h2>
+			<h2 class="">Join our Community</h2>
 			<p>Stay connected to our global community.</p>
 		</div>
 
