removed switch/icon at top right, fixed background gradient, aligned text on main cards, reduced font weight of paragraphs in features section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </script>
 </head>
 <body class="dark">
-    <div style="z-index:-1;position:fixed;height:100%;width:100%;background:rgba(25, 31, 43, 0.63);right:0;left:0;" class="overlay">
-	</div>
+    <!-- <div style="z-index:-1;position:fixed;height:100%;width:100%;background:rgba(25, 31, 43, 0.63);right:0;left:0;" class="overlay">
+	</div> -->
     <div class="main">
 		<header>
 			<!--<img src="./img/cherry_logo.png" alt="logo" class="sunMode">-->
@@ -46,10 +46,7 @@
 					<!--<i><img src="./img/menu_light.png" alt="menu" class="sunMode"></i>-->
 					<i><img src="./img/menu_dark.png" alt="menu" class="darkMode"></i>
 				</div>
-				<div id="switch" class="switch">
-					<!--<i><img src="./img/moon_theme.png" alt="sun" class="sunMode"></i>-->
-					<i><img src="./img/sun_theme.png" alt="moon" class="darkMode"></i>
-				</div>
+		
 			</nav>
 		</header>
 		<main>
