--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 		<main>
 			<article class="articleLeft">
 				<div>
-					<h2 class=" ">Lending and Borrowing protocol on Cardano and Ergo</h2>
-					<h1>Open-source Lending Without Limits. </h1>
+					<h2 class=" ">Lending and Borrowing Protocol on Cardano and Ergo</h2>
+					<h1>Open-source Lending without Limits. </h1>
 					<div class="buttons">
 						<a href="#" target="_blank"><button class="button">Launch CherryLend</button></a>
 					</div>
@@ -242,16 +242,16 @@
                 <!-- <img src="./img/logo_anetabtc_l.png" alt="aneta_logo" class="sunMode"> -->
                 <img src="./img/logo_anetabtc.png" alt="aneta_logo" class="darkMode">
             </a>
-            <a class="cardAsset" href="https://minswap.org/" target="_blank">
+            <a class="cardAsset" href="https://ergopad.io/" target="_blank">
                 <!-- <img src="./img/logo_minswap_l.png" alt="minswap_logo" class="sunMode"> -->
                 <img src="./img/logo_ergopod.png" alt="minswap_logo" class="darkMode">
             </a>
-            <a class="cardAsset" href="https://aada.finance/" target="_blank">
+            <a class="cardAsset" href="https://paideia.im/" target="_blank">
                 <!-- <img src="./img/logo_aada_l.png" alt="aada_logo" class="sunMode"> -->
                 <img src="./img/logo_paideia.png" alt="aada_logo" class="darkMode">
             </a>
 
-            <a class="cardAsset" href="https://www.scatdao.com/" target="_blank">
+            <a class="cardAsset" href="https://www.saturnlabs.org/" target="_blank">
                 <!-- <img src="./img/logo_scatdao_l.png" alt="scat_logo" class="sunMode"> -->
                 <img src="./img/logo_saturn-labs.png" alt="scat_logo" class="darkMode">
             </a>
@@ -273,7 +273,7 @@
 			<a class="cardSocial twitter" href="#">
 				<img src="./img/twitter.png" alt="twitter">
 				<h3>Twitter</h3>
-				<p>Stay up to date with @CherryLend updates on our Twitter.</p>
+				<p>Stay up to date with @Cherry_Lend updates on our Twitter.</p>
 			</a>
 
 			<a class="cardSocial discord" href="#">
