--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
             <a class="cardAsset" href="https://anetabtc.io/" target="_blank">
                 <!-- <img src="./img/logo_anetabtc_l.png" alt="aneta_logo" class="sunMode"> -->
-                <img src="./img/logo_anetabtc.png" alt="aneta_logo" class="darkMode">
+                <img src="./img/logo_anetaBTC.png" alt="aneta_logo" class="darkMode">
             </a>
             <a class="cardAsset" href="https://ergopad.io/" target="_blank">
                 <!-- <img src="./img/logo_minswap_l.png" alt="minswap_logo" class="sunMode"> -->
