--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="#"> Docs </a>
+                <a href="https://docs.cherrylend.org/" target="_blank"> Docs </a>
               </li>
 
 
@@ -116,7 +116,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" target="_blank" href="https://discord.gg/WphPsxfKpp">
+                    <a class="dropdown-item" target="_blank" href="https://discord.com/invite/suuavpNAPS">
                       <img src="assets/img/socials/discord.svg" style="height: 13.8px;" alt="">
                       <span> Discord </span>
                     </a>
@@ -128,7 +128,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" target="_blank" href="https://t.me/+8cuy3UUhVGdkNzFh">
+                    <a class="dropdown-item" target="_blank" href="https://t.me/cherrylendofficial">
                       <img src="assets/img/socials/telegram.svg" style="height: 16px;" alt="">
                       <span> Telegram </span>
                     </a>
@@ -848,7 +848,7 @@
                 <ul>
 
                   <li>
-                    <a href="#" > Docs </a>
+                    <a href="https://docs.cherrylend.org/" target="_blank" > Docs </a>
                   </li>
                   <li>
                     <a href="https://medium.com/@CherryLend" target="_blank"> News and Updates </a>
@@ -900,14 +900,14 @@
           <div class="footer-social">
             <a href="https://twitter.com/cherry_lend" target="_blank">
 
-              <svg viewBox="0 0 38 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg  width="38" height="37"viewBox="0 0 38 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M0 5.78125C0 2.58835 2.65831 0 5.9375 0H32.0625C35.3417 0 38 2.58835 38 5.78125V31.2188C38 34.4116 35.3417 37 32.0625 37H5.9375C2.65831 37 0 34.4116 0 31.2188V5.78125ZM26.2437 13.2969C27.075 13.1812 27.7875 13.0656 28.5 12.7188C28.025 13.5281 27.3125 14.2219 26.4812 14.6844C26.7188 20.1187 22.6812 26.0156 15.4375 26.0156C13.3 26.0156 11.2812 25.3219 9.5 24.2812C11.5188 24.5125 13.6562 23.9344 15.0813 22.8937C13.3 22.8937 11.875 21.7375 11.4 20.2344C11.9938 20.35 12.5875 20.2344 13.1813 20.1187C11.4 19.6562 10.0938 18.0375 10.0938 16.3031C10.6875 16.5344 11.2812 16.7656 11.875 16.7656C10.2125 15.6094 9.61875 13.4125 10.6875 11.6781C12.7063 13.9906 15.5563 15.4937 18.7625 15.6094C18.1688 13.2969 20.0688 10.9844 22.5625 10.9844C23.6313 10.9844 24.7 11.4469 25.4125 12.1406C26.3625 11.9094 27.1938 11.6781 27.9062 11.2156C27.6687 12.1406 27.075 12.8344 26.2437 13.2969Z" />
               </svg>
 
             </a>
 
-            <a href="https://t.me/+8cuy3UUhVGdkNzFh" target="_blank">
+            <a href="https://t.me/cherrylendofficial" target="_blank">
 
               <svg width="38" height="37" viewBox="0 0 38 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -915,7 +915,7 @@
               </svg>
 
             </a>
-            <a href="https://discord.gg/WphPsxfKpp" target="_blank">
+            <a href="https://discord.com/invite/suuavpNAPS" target="_blank">
 
               <svg width="38" height="37" viewBox="0 0 38 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
