--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                   </li>
 
                   <li>
-                    <a href="#">
+                    <a href="https://medium.com/@CherryLend/cherrylend-litepaper-7aa0107cbbfd" target="_blank">
                       Litepaper
                     </a>
                   </li>
@@ -887,7 +887,7 @@
                 <h5> Foundation </h5>
                 <ul>
                   <li>
-                  <a href="mailto:info@cherrylend.org"> info@cherrylend.org </a>
+                  <a href="mailto:cherrylendofficial@gmail.com">  cherrylendofficial@gmail.com </a>
                   </li>
                 </ul>
               </div><!-- /.footer-links -->
