--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                 <ul>
 
                   <li>
-                    <a  href="#">
+                    <a target="_blank"  href="https://drive.google.com/drive/mobile/folders/1rp93l7Ikn7lHmq7oXAqDiS_NEa0Z_g8b?usp=sharing">
                       Media Kit
                     </a>
                   </li>
