--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         </p>
       </div><!-- /.sec-t -->
 
-      <div class="row gy-4">
+      <div class="row gy-4 justify-content-center">
         <div class="col-lg-4">
           <a href="https://nexuspool.org/" target="_blank" class="team-single one">
 
@@ -796,7 +796,7 @@
           </a><!-- /.team-single -->
         </div><!-- /.col-lg-4 -->
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 d-none">
           <a href="https://cardano-blockhouse.de/" target="_blank" class="team-single three">
 
             <svg viewBox="0 0 273 83" fill="none" xmlns="http://www.w3.org/2000/svg">
