--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                   </g>
                 </svg>
                 <p>
-                  CherryLend is a Lending and Borrowing Platform on Cardano and Ergo.
+                  CherryLend is a Lending and Borrowing Platform on Cardano.
                 </p>
               </div><!-- /.footer-logo-w -->
             </div><!-- /.col-lg-3 -->
