--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <ul id="nav" class="navbar-nav  btn-nav">
               <li class="nav-item">
-                <a href="https://medium.com/@CherryLend" target="_blank" class="btn-nav"> Recent News </a>
+                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Recent News </a>
               </li>
             </ul>
 
