--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                 <a href="https://docs.cherrylend.org/" target="_blank"> Docs </a>
               </li>
 
+              <li class="nav-item">
+                <a href="https://medium.com/@CherryLend/cherrylend-tokenomics-7ba758868ec0" target="_blank"> Tokenomics </a>
+              </li>
+
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -134,6 +138,12 @@
                     <a class="dropdown-item" target="_blank" href="https://t.me/cherrylendofficial">
                       <img src="assets/img/socials/telegram.svg" style="height: 16px;" alt="">
                       <span> Telegram </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" target="_blank" href="https://medium.com/@CherryLend">
+                      <img src="assets/img/socials/medium.png" style="height: 14px; min-width: auto; margin-left: 6px;" alt="">
+                      <span> Medium </span>
                     </a>
                   </li>
 
