--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://medium.com/@CherryLend/cherrylend-tokenomics-7ba758868ec0" target="_blank"> Tokenomics </a>
+                <a href="https://medium.com/@CherryLend/cherrylend-tokenomics-7ba758868ec0" target="_blank"> Tokenomics
+                </a>
               </li>
 
 
@@ -142,7 +143,8 @@
                   </li>
                   <li>
                     <a class="dropdown-item" target="_blank" href="https://medium.com/@CherryLend">
-                      <img src="assets/img/socials/medium.png" style="height: 14px; min-width: auto; margin-left: 6px;" alt="">
+                      <img src="assets/img/socials/medium.png" style="height: 14px; min-width: auto; margin-left: 6px;"
+                        alt="">
                       <span> Medium </span>
                     </a>
                   </li>
@@ -156,7 +158,8 @@
 
             <ul id="nav" class="navbar-nav  btn-nav">
               <li class="nav-item">
-                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Recent News </a>
+                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Recent News
+                </a>
               </li>
             </ul>
 
@@ -901,7 +904,8 @@
                     <a href="https://medium.com/@CherryLend" target="_blank"> News and Updates </a>
                   </li>
                   <li>
-                    <a href="https://medium.com/@CherryLend/cherrylend-tokenomics-7ba758868ec0" target="_blank"> Tokenomics </a>
+                    <a href="https://medium.com/@CherryLend/cherrylend-tokenomics-7ba758868ec0" target="_blank">
+                      Tokenomics </a>
                   </li>
 
                 </ul>
