--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               CherryLend is an open-source, secure, and scalable lending and
               borrowing protocol on the Cardano blockchain.
             </p>
-            <a href="https://medium.com/@CherryLend" target="_blank" class="btn-main"> Recent Updates </a>
+            <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-main"> Recent Updates </a>
           </div><!-- /.hero-texts -->
         </div><!-- /.col-lg-5 -->
 
