--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <ul id="nav" class="navbar-nav  btn-nav">
               <li class="nav-item">
-                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Recent News
+                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Launch App
                 </a>
               </li>
             </ul>
@@ -202,7 +202,7 @@
               CherryLend is an open-source, secure, and scalable lending and
               borrowing protocol on the Cardano blockchain.
             </p>
-            <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-main"> Recent Updates </a>
+            <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-main"> Launch App </a>
           </div><!-- /.hero-texts -->
         </div><!-- /.col-lg-5 -->
 
