--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <ul id="nav" class="navbar-nav  btn-nav">
               <li class="nav-item">
-                <a href="https://cherrylend-testnet.vercel.app/overview" target="_blank" class="btn-nav"> Launch App
+                <a href="https://testnet.cherrylend.org/overview" target="_blank" class="btn-nav"> Launch App
                 </a>
               </li>
             </ul>
