--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css?v=5" />
+  <link rel="stylesheet" href="assets/css/main.css?v=6" />
 </head>
 
 <body>
@@ -367,7 +367,7 @@
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
               </svg>
               <span>
-                Q1 2023
+                Q4 2023
               </span>
             </div><!-- /.click-tab -->
 
@@ -378,7 +378,7 @@
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
               </svg>
               <span>
-                Q2 2024
+                Q2 2023
               </span>
             </div><!-- /.click-tab -->
 
@@ -386,7 +386,9 @@
         </div><!-- /.col-lg-8 -->
 
         <div class="col-lg-4">
-          <img src="assets/img/roadmap/map-1.svg" class="img-fluid map-img" alt="">
+          <img src="assets/img/roadmap/map-1.svg" class="img-fluid map-img map-dark" alt="">
+          <img src="assets/img/roadmap/map-light.svg" class="img-fluid map-img map-light" alt="">
+
         </div><!-- /.col-lg-4 -->
 
       </div><!-- /.row -->
@@ -424,18 +426,20 @@
       <div class="row gy-lg-5 gy-4">
         <div class="col-lg-10 col-xl-10">
           <div class="case-single">
-            <svg xmlns="http://www.w3.org/2000/svg" width="156" height="191" viewBox="0 0 156 191" fill="none">
-              <g clip-path="url(#clip0_50_1312)">
-                <path
-                  d="M59.8388 31.9499C59.8388 16.9813 47.6418 4.84692 32.5962 4.84692C17.5505 4.84692 5.35352 16.9813 5.35352 31.9499C5.35352 46.9184 17.5505 59.0528 32.5962 59.0528C47.6418 59.0528 59.8388 46.9184 59.8388 31.9499ZM59.8388 31.9499H118.865C136.418 31.9499 150.648 46.1066 150.648 63.57C150.648 81.0333 136.418 95.1901 118.865 95.1901H37.1366C19.5833 95.1901 5.35352 109.347 5.35352 126.81C5.35352 144.273 19.5833 158.43 37.1366 158.43H141.567M123.405 185.533L149.219 161.624C151.124 159.86 151.124 157.001 149.219 155.237L123.405 131.327"
-                  stroke="white" stroke-width="9.31373" stroke-linecap="round" />
-              </g>
-              <defs>
-                <clipPath id="clip0_50_1312">
-                  <rect width="154.608" height="190" fill="white" transform="translate(0.696289 0.189941)" />
-                </clipPath>
-              </defs>
-            </svg>
+             <div class="gole">
+              <svg xmlns="http://www.w3.org/2000/svg" width="156" height="191" viewBox="0 0 156 191" fill="none">
+                <g clip-path="url(#clip0_50_1312)">
+                  <path
+                    d="M59.8388 31.9499C59.8388 16.9813 47.6418 4.84692 32.5962 4.84692C17.5505 4.84692 5.35352 16.9813 5.35352 31.9499C5.35352 46.9184 17.5505 59.0528 32.5962 59.0528C47.6418 59.0528 59.8388 46.9184 59.8388 31.9499ZM59.8388 31.9499H118.865C136.418 31.9499 150.648 46.1066 150.648 63.57C150.648 81.0333 136.418 95.1901 118.865 95.1901H37.1366C19.5833 95.1901 5.35352 109.347 5.35352 126.81C5.35352 144.273 19.5833 158.43 37.1366 158.43H141.567M123.405 185.533L149.219 161.624C151.124 159.86 151.124 157.001 149.219 155.237L123.405 131.327"
+                    stroke="white" stroke-width="9.31373" stroke-linecap="round" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_50_1312">
+                    <rect width="154.608" height="190" fill="white" transform="translate(0.696289 0.189941)" />
+                  </clipPath>
+                </defs>
+              </svg>
+             </div><!-- /.gole -->
             <div class="case-txt">
               <h3> Shorting </h3>
               <p>
@@ -449,7 +453,9 @@
 
         <div class="col-lg-10 col-xl-10 offset-xl-2 offset-lg-2">
           <div class="case-single">
-
+ 
+            <div class="gole">
+              
             <svg xmlns="http://www.w3.org/2000/svg" class="arrow-cl" width="161" height="130" viewBox="0 0 161 130" fill="none">
               <g clip-path="url(#clip0_50_1306)">
                 <path
@@ -462,6 +468,7 @@
                 </clipPath>
               </defs>
             </svg>
+            </div><!-- /.gole --> 
 
             <div class="case-txt">
               <h3> Leveraging </h3>
@@ -475,6 +482,7 @@
 
         <div class="col-lg-10 col-xl-10">
           <div class="case-single">
+           <div class="gole">
             <svg xmlns="http://www.w3.org/2000/svg" width="142" height="191" viewBox="0 0 142 191" fill="none">
               <g clip-path="url(#clip0_50_1299)">
                 <path
@@ -487,12 +495,13 @@
                 </clipPath>
               </defs>
             </svg>
+           </div><!-- /.gole -->
             <div class="case-txt">
               <h3> Yield Farming </h3>
               <p>
-                Users can earn CHRY for using the CherryLend protocol starting from the 1st day of our mainnet launch
-                planned Q2
-                2023.
+                Users can earn CHRY for using the CherryLend protocol starting from the 1st day of our mainnet launch.
+                <!-- planned Q2
+                2023. -->
               </p>
             </div><!-- /.case-txt -->
           </div><!-- /.case-single -->
