--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                 </a>
               </li>
 
+               <li class="nav-item">
+                <a href="https://www.clarity.vote/organizations/CherryLend" target="_blank"> Governance 
+                </a>
+              </li>
+
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
