--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           </div><!-- /.map-txt -->
           <div class="map-click">
             <div class="click-tab">
-              <span> Peered Lending </span>
+              <span> Mainnet V1  </span>
               <svg viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
@@ -366,24 +366,24 @@
             </div><!-- /.click-tab -->
 
             <div class="click-tab">
-              <span> CHRY Staking </span>
+              <span> Farming and Staking </span>
               <svg viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
               </svg>
               <span>
-                Q4 2023
+                Q1 2024
               </span>
             </div><!-- /.click-tab -->
 
             <div class="click-tab">
-              <span> CherryLend V2 </span>
+              <span> Smart Lending (V2) </span>
               <svg viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
               </svg>
               <span>
-                Q2 2023
+                Q2 2024
               </span>
             </div><!-- /.click-tab -->
 
