--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css?v=6" />
+  <link rel="stylesheet" href="assets/css/main.css?v=12" />
 </head>
 
 <body>
@@ -112,6 +112,16 @@
 
                <li class="nav-item">
                 <a href="https://www.clarity.vote/organizations/CherryLend" target="_blank"> Governance 
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="https://medium.com/@CherryLend/cherrylend-v2-smart-lending-a0251f809f09" target="_blank"> Cherry V2 
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="https://medium.com/@CherryLend/incentives-structure-4a4db899a037#:~:text=CherryLend%20Incentives%20Structure,of%20CHRY%20for%20each%20loan" target="_blank"> How to Earn 
                 </a>
               </li>
 
