--- a/index.html
+++ b/index.html
@@ -110,18 +110,26 @@
                 </a>
               </li>
 
-               <li class="nav-item">
-                <a href="https://www.clarity.vote/organizations/CherryLend" target="_blank"> Governance 
+              <li class="nav-item">
+                <a href="https://www.clarity.vote/organizations/CherryLend" target="_blank"> Governance
                 </a>
               </li>
 
               <li class="nav-item">
-                <a href="https://medium.com/@CherryLend/cherrylend-v2-smart-lending-a0251f809f09" target="_blank"> Cherry V2 
+                <a href="https://medium.com/@CherryLend/cherrylend-v2-smart-lending-a0251f809f09" target="_blank">
+                  Cherry V2
                 </a>
               </li>
 
               <li class="nav-item">
-                <a href="https://medium.com/@CherryLend/incentives-structure-4a4db899a037#:~:text=CherryLend%20Incentives%20Structure,of%20CHRY%20for%20each%20loan" target="_blank"> How to Earn 
+                <a href="https://medium.com/@CherryLend/incentives-structure-4a4db899a037#:~:text=CherryLend%20Incentives%20Structure,of%20CHRY%20for%20each%20loan"
+                  target="_blank"> How to Earn
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="https://twitter.com/cherry_lend/status/1745114294209876261?s=46&t=X1sJLYL6zORh4pcBGIlQCw"
+                  target="_blank"> Stake Pool
                 </a>
               </li>
 
@@ -365,7 +373,7 @@
           </div><!-- /.map-txt -->
           <div class="map-click">
             <div class="click-tab">
-              <span> Mainnet V1  </span>
+              <span> Mainnet V1 </span>
               <svg viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M13.3536 4.35355C13.5488 4.15829 13.5488 3.84171 13.3536 3.64645L10.1716 0.464465C9.97631 0.269203 9.65973 0.269203 9.46447 0.464465C9.2692 0.659727 9.2692 0.97631 9.46447 1.17157L12.2929 4L9.46447 6.82843C9.2692 7.02369 9.2692 7.34027 9.46447 7.53553C9.65973 7.7308 9.97631 7.7308 10.1716 7.53553L13.3536 4.35355ZM4.37114e-08 4.5L13 4.5L13 3.5L-4.37114e-08 3.5L4.37114e-08 4.5Z" />
@@ -441,7 +449,7 @@
       <div class="row gy-lg-5 gy-4">
         <div class="col-lg-10 col-xl-10">
           <div class="case-single">
-             <div class="gole">
+            <div class="gole">
               <svg xmlns="http://www.w3.org/2000/svg" width="156" height="191" viewBox="0 0 156 191" fill="none">
                 <g clip-path="url(#clip0_50_1312)">
                   <path
@@ -454,7 +462,7 @@
                   </clipPath>
                 </defs>
               </svg>
-             </div><!-- /.gole -->
+            </div><!-- /.gole -->
             <div class="case-txt">
               <h3> Shorting </h3>
               <p>
@@ -468,22 +476,23 @@
 
         <div class="col-lg-10 col-xl-10 offset-xl-2 offset-lg-2">
           <div class="case-single">
- 
+
             <div class="gole">
-              
-            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-cl" width="161" height="130" viewBox="0 0 161 130" fill="none">
-              <g clip-path="url(#clip0_50_1306)">
-                <path
-                  d="M151.553 30.0948C153.124 28.5258 153.125 25.9804 151.557 24.4095C149.988 22.8385 147.442 22.8368 145.871 24.4057L151.553 30.0948ZM31.9014 77.5213C30.3304 79.0902 30.3287 81.6354 31.8976 83.2064C33.4666 84.7775 36.0119 84.7791 37.5829 83.2104L31.9014 77.5213ZM118.32 15.6422C116.1 15.6422 114.3 17.4421 114.3 19.6623C114.3 21.8825 116.1 23.6824 118.32 23.6824V15.6422ZM152.29 57.602C152.29 59.8222 154.09 61.6221 156.31 61.6221C158.53 61.6221 160.33 59.8222 160.33 57.602H152.29ZM156.31 129.914C158.53 129.914 160.33 128.113 160.33 125.893C160.33 123.674 158.53 121.873 156.31 121.873V129.914ZM8.37028 4.48641C8.37028 2.26617 6.57042 0.466309 4.35018 0.466309C2.12994 0.466309 0.330079 2.26617 0.330079 4.48641H8.37028ZM72.5776 47.9533L97.5972 72.9396L103.278 67.2506L78.2592 42.2643L72.5776 47.9533ZM108.651 72.9396L151.553 30.0948L145.871 24.4057L102.97 67.2506L108.651 72.9396ZM37.5829 83.2104L72.8865 47.9533L67.205 42.2643L31.9014 77.5213L37.5829 83.2104ZM97.5972 72.9396C100.65 75.9887 105.598 75.9887 108.651 72.9396L102.97 67.2506C103.056 67.1648 103.192 67.1648 103.278 67.2506L97.5972 72.9396ZM78.2592 42.2643C75.2061 39.2153 70.2581 39.2153 67.205 42.2643L72.8865 47.9533C72.8007 48.0392 72.6635 48.0391 72.5776 47.9533L78.2592 42.2643ZM118.32 23.6824H152.511V15.6422H118.32V23.6824ZM152.29 23.4563V57.602H160.33V23.4563H152.29ZM152.511 23.6824C152.394 23.6824 152.29 23.5861 152.29 23.4563H160.33C160.33 19.1357 156.825 15.6422 152.511 15.6422V23.6824ZM156.31 121.873H52.9773V129.914H156.31V121.873ZM8.37028 77.3306V4.48641H0.330079V77.3306H8.37028ZM52.9773 121.873C44.4005 121.873 38.2094 121.87 33.3429 121.473C28.5231 121.08 25.3575 120.32 22.7676 119.002L19.1213 126.168C23.0326 128.158 27.3729 129.053 32.689 129.487C37.9583 129.917 44.533 129.914 52.9773 129.914V121.873ZM0.330079 77.3306C0.330079 85.7632 0.326944 92.3304 0.75753 97.5935C1.19197 102.903 2.08792 107.24 4.08175 111.148L11.2437 107.494C9.92493 104.909 9.16465 101.75 8.77092 96.9375C8.37341 92.0788 8.37028 85.8967 8.37028 77.3306H0.330079ZM22.7676 119.002C17.8051 116.477 13.7713 112.449 11.2437 107.494L4.08175 111.148C7.38167 117.616 12.6467 122.874 19.1213 126.168L22.7676 119.002Z"
-                  fill="white" />
-              </g>
-              <defs>
-                <clipPath id="clip0_50_1306">
-                  <rect width="160" height="129.447" fill="white" transform="translate(0.330078 0.466309)" />
-                </clipPath>
-              </defs>
-            </svg>
-            </div><!-- /.gole --> 
+
+              <svg xmlns="http://www.w3.org/2000/svg" class="arrow-cl" width="161" height="130" viewBox="0 0 161 130"
+                fill="none">
+                <g clip-path="url(#clip0_50_1306)">
+                  <path
+                    d="M151.553 30.0948C153.124 28.5258 153.125 25.9804 151.557 24.4095C149.988 22.8385 147.442 22.8368 145.871 24.4057L151.553 30.0948ZM31.9014 77.5213C30.3304 79.0902 30.3287 81.6354 31.8976 83.2064C33.4666 84.7775 36.0119 84.7791 37.5829 83.2104L31.9014 77.5213ZM118.32 15.6422C116.1 15.6422 114.3 17.4421 114.3 19.6623C114.3 21.8825 116.1 23.6824 118.32 23.6824V15.6422ZM152.29 57.602C152.29 59.8222 154.09 61.6221 156.31 61.6221C158.53 61.6221 160.33 59.8222 160.33 57.602H152.29ZM156.31 129.914C158.53 129.914 160.33 128.113 160.33 125.893C160.33 123.674 158.53 121.873 156.31 121.873V129.914ZM8.37028 4.48641C8.37028 2.26617 6.57042 0.466309 4.35018 0.466309C2.12994 0.466309 0.330079 2.26617 0.330079 4.48641H8.37028ZM72.5776 47.9533L97.5972 72.9396L103.278 67.2506L78.2592 42.2643L72.5776 47.9533ZM108.651 72.9396L151.553 30.0948L145.871 24.4057L102.97 67.2506L108.651 72.9396ZM37.5829 83.2104L72.8865 47.9533L67.205 42.2643L31.9014 77.5213L37.5829 83.2104ZM97.5972 72.9396C100.65 75.9887 105.598 75.9887 108.651 72.9396L102.97 67.2506C103.056 67.1648 103.192 67.1648 103.278 67.2506L97.5972 72.9396ZM78.2592 42.2643C75.2061 39.2153 70.2581 39.2153 67.205 42.2643L72.8865 47.9533C72.8007 48.0392 72.6635 48.0391 72.5776 47.9533L78.2592 42.2643ZM118.32 23.6824H152.511V15.6422H118.32V23.6824ZM152.29 23.4563V57.602H160.33V23.4563H152.29ZM152.511 23.6824C152.394 23.6824 152.29 23.5861 152.29 23.4563H160.33C160.33 19.1357 156.825 15.6422 152.511 15.6422V23.6824ZM156.31 121.873H52.9773V129.914H156.31V121.873ZM8.37028 77.3306V4.48641H0.330079V77.3306H8.37028ZM52.9773 121.873C44.4005 121.873 38.2094 121.87 33.3429 121.473C28.5231 121.08 25.3575 120.32 22.7676 119.002L19.1213 126.168C23.0326 128.158 27.3729 129.053 32.689 129.487C37.9583 129.917 44.533 129.914 52.9773 129.914V121.873ZM0.330079 77.3306C0.330079 85.7632 0.326944 92.3304 0.75753 97.5935C1.19197 102.903 2.08792 107.24 4.08175 111.148L11.2437 107.494C9.92493 104.909 9.16465 101.75 8.77092 96.9375C8.37341 92.0788 8.37028 85.8967 8.37028 77.3306H0.330079ZM22.7676 119.002C17.8051 116.477 13.7713 112.449 11.2437 107.494L4.08175 111.148C7.38167 117.616 12.6467 122.874 19.1213 126.168L22.7676 119.002Z"
+                    fill="white" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_50_1306">
+                    <rect width="160" height="129.447" fill="white" transform="translate(0.330078 0.466309)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div><!-- /.gole -->
 
             <div class="case-txt">
               <h3> Leveraging </h3>
@@ -497,20 +506,20 @@
 
         <div class="col-lg-10 col-xl-10">
           <div class="case-single">
-           <div class="gole">
-            <svg xmlns="http://www.w3.org/2000/svg" width="142" height="191" viewBox="0 0 142 191" fill="none">
-              <g clip-path="url(#clip0_50_1299)">
-                <path
-                  d="M47.9633 185.51V150.07C47.9633 111.673 63.2442 74.8483 90.4443 47.6976M58.5836 90.1015C46.1932 81.2673 25.6608 57.2385 42.6532 31.7962C58.749 7.69632 104.703 3.88827 129.064 5.05517C131.375 5.16583 133.293 6.80351 133.749 9.06652C140.034 40.1594 139.37 96.6331 90.4443 100.703M47.9633 164.308C47.9633 150.174 39.4672 121.904 5.48242 121.904"
-                  stroke="white" stroke-width="9.35961" stroke-linecap="round" />
-              </g>
-              <defs>
-                <clipPath id="clip0_50_1299">
-                  <rect width="140.394" height="190" fill="white" transform="translate(0.802734 0.189941)" />
-                </clipPath>
-              </defs>
-            </svg>
-           </div><!-- /.gole -->
+            <div class="gole">
+              <svg xmlns="http://www.w3.org/2000/svg" width="142" height="191" viewBox="0 0 142 191" fill="none">
+                <g clip-path="url(#clip0_50_1299)">
+                  <path
+                    d="M47.9633 185.51V150.07C47.9633 111.673 63.2442 74.8483 90.4443 47.6976M58.5836 90.1015C46.1932 81.2673 25.6608 57.2385 42.6532 31.7962C58.749 7.69632 104.703 3.88827 129.064 5.05517C131.375 5.16583 133.293 6.80351 133.749 9.06652C140.034 40.1594 139.37 96.6331 90.4443 100.703M47.9633 164.308C47.9633 150.174 39.4672 121.904 5.48242 121.904"
+                    stroke="white" stroke-width="9.35961" stroke-linecap="round" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_50_1299">
+                    <rect width="140.394" height="190" fill="white" transform="translate(0.802734 0.189941)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div><!-- /.gole -->
             <div class="case-txt">
               <h3> Yield Farming </h3>
               <p>
